cpp/test/FreezeScript/dbmap/fail/18_old.ice
module Test
{

class C1 {};
class C2 extends C1 {};
class C3 {};

struct S
{
    Object m1;
    C1 m2;
    C2 m3;
    C3 m4;
};

};
